--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  mqtt_client: ^9.6.1
-  provider: ^6.0.5
   flutter:
     sdk: flutter
+  mqtt_client: ^9.6.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.0
+  provider: ^6.0.5
+  http: ^1.1.0
+  shared_preferences: ^2.2.0
+  intl: ^0.18.0
+  fl_chart: ^0.65.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
