--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   shared_preferences: ^2.2.0
   intl: ^0.18.0
   fl_chart: ^0.65.0
-  
+  url_launcher: ^6.2.1  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
